Breaking into separate rpms (#9)
* Initial commit for muliple rpm

* Part 1 - breaking down rpms

* Part 2 - breaking down rpms

* final part - breaking down rpms

* fixing uploading

* fixing env file copy

* Update create_rpms

* Update dell-cpsd-rackhd-files.spec

* fixing location of conf dir

* Added nfs-utils as dependency

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ AMQP_HOST=172.17.0.1
 MONGO_HOST=127.0.0.1
 REGISTRY_IP=172.31.128.1
 HOST_IP=172.31.128.1
+RABBIT_MQ_TAG=3.6-management-alpine
+CONSUL_TAG=0.9.3
+POSTGRES_TAG=9.6.1-alpine
+LATEST_TAG=latest
+DEVELOP_TAG=devel
