add volume mapping to rackhd_http to map the directory used by an api/files request to a volume used as a staticDirectory. This allows files uploaded with an api/files request to be downloaded from the static directory without supplying credentials, which is needed for switch version upgrade

--- a/rackhd/install/docker-compose.yml
+++ b/rackhd/install/docker-compose.yml
@@ -127,6 +127,7 @@ services:
     volumes:
       - "../files/mount/common:/RackHD/on-http/static/http/common"
       - "../iso:/RackHD/on-http/static/http"
+      - "../conf/monorail/static/http/downloads:/RackHD/on-http/static/files"
       - "../conf/monorail:/opt/monorail"
     restart: unless-stopped
 
